# Software_Engg_Lab_Spr23

Assignment 01/: 21CS10042_A1.cpp
Assignment 02/Python_DS_Assignment_Question_01/: DoubleLinkedBase.py
Assignment 02/Python_DS_Assignment_Question_02/: main.py  pyproject.toml
Assignment 02/Python_DS_Assignment_Question_02/.cph/: .main.py_71f469e5db9c90ec350f3a021d297862.prob
Assignment 02/Python_DS_Assignment_Question_02/LAVIS-main/projects/blip2/: README.md
Assignment 02/Python_DS_Assignment_Question_02/imagecaption/: model.py
Assignment 02/Python_DS_Assignment_Question_02/imagecaption/data/: Dataset.py  Download.py
Assignment 02/Python_DS_Assignment_Question_02/imagecaption/data/transforms/: BlurImage.py  CropImage.py  FlipImage.py  RescaleImage.py  RotateImage.py
Assignment 03/: rdb-attr.cpp  rdb-basics.cpp  rdb-join.cpp  rdb-main.cpp  rdb.h
Assignment 04/Python_Tkinter_Assignment/: ImageViewerGUI.py  README.md
Assignment 04/Python_Tkinter_Assignment/captioner/: model.py
Assignment 05/: OGs - HarNiVik Air.docx
Project - HarNiVik Air - Online Airline Ticket Booking System/: project_repo
