[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imagecaptioner"
version = "0.0.2"
authors = [
  { name="Harshith Chowdary", email="meduriharshith1@gmail.com" },
]
description = "Package to Play with Images and Captioning"
readme = "README.md"
requires-python = "==3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"